namespace DemoDotnetCli.Display;

public interface ITerminal
{
    void Show(string message);
}