namespace DemoDotnetCli.Generator;

public interface IPasswordGenerator
{
    string Generate();
}