namespace DemoDotnetCli;

interface IProgram
{
    void Start(string[] args);
}