namespace DemoDotnetCli.Processor;

public interface IArgumentProcessor
{
    void Process(string[] args);
}