namespace DemoDotnetCli.Shuffler;

public interface IStringShuffler
{
    string Shuffle(string characters);
}